use latest stable toolchain in action

--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -20,6 +20,8 @@ jobs:
       run: rustup toolchain add nightly
     - name: Set default toolchain to stable
       run: rustup default stable
+    - name: Update stable toolchain
+      run: rustup update stable
     - name: Install miri
       run: rustup component add --toolchain nightly miri
     - name: Build
