run tests through valgrind

--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -28,5 +28,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run tests with valgrind
+      run: valgrind --help && cargo install cargo-valgrind && cargo valgrind test --verbose
     - name: Run tests in Miri
       run: cargo +nightly miri test
